[gd_scene load_steps=19 format=3 uid="uid://cfe3n5qg62l1"]

[ext_resource type="Script" path="res://Props/tombramp/tombramp.gd" id="1_c6y4f"]
[ext_resource type="Texture2D" uid="uid://c3e05d8n8ga3g" path="res://Props/tombramp/tumba pulo.png" id="2_4mh73"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h02qb"]
size = Vector2(21.3137, 42.7037)

[sub_resource type="AtlasTexture" id="AtlasTexture_t556k"]
atlas = ExtResource("2_4mh73")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_li8bj"]
atlas = ExtResource("2_4mh73")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0som"]
atlas = ExtResource("2_4mh73")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvh4v"]
atlas = ExtResource("2_4mh73")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiqvl"]
atlas = ExtResource("2_4mh73")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5ttp"]
atlas = ExtResource("2_4mh73")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f60f2"]
atlas = ExtResource("2_4mh73")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1tv6"]
atlas = ExtResource("2_4mh73")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qq4p"]
atlas = ExtResource("2_4mh73")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_entc2"]
atlas = ExtResource("2_4mh73")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yufms"]
atlas = ExtResource("2_4mh73")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rco87"]
atlas = ExtResource("2_4mh73")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mojdb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t556k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li8bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0som")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvh4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiqvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5ttp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f60f2")
}],
"loop": false,
"name": &"cut_hand",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1tv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qq4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_entc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yufms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rco87")
}],
"loop": true,
"name": &"idle_tomb",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpxt6"]
size = Vector2(35, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8qlt"]
size = Vector2(34.25, 15.5)

[node name="tombramp" type="StaticBody2D"]
script = ExtResource("1_c6y4f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 5)
rotation = 1.22173
shape = SubResource("RectangleShape2D_h02qb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_mojdb")
animation = &"idle_tomb"
autoplay = "idle_tomb"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://Props/tombramp",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://Props/tombramp/tumba pulo.ase"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "71a66a6755e2ee4f3ab75b54ffce59fa"

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5.5, -6.5)
shape = SubResource("RectangleShape2D_dpxt6")
debug_color = Color(0.369631, 0.477887, 1, 0.42)

[node name="up_logic" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="up_logic"]
position = Vector2(-6.125, -4.75)
shape = SubResource("RectangleShape2D_l8qlt")
debug_color = Color(2.45467e-06, 0.640241, 0.352872, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="up_logic" to="." method="_on_up_logic_body_entered"]
[connection signal="body_exited" from="up_logic" to="." method="_on_up_logic_body_exited"]
